@@ -5,9 +5,10 @@ import com.uket.app.ticket.api.handler.CustomSuccessHandler;
 import com.uket.domain.auth.service.CustomOAuth2UserService;
 import com.uket.domain.auth.validator.TokenValidator;
 import com.uket.jwtprovider.auth.JwtAuthTokenUtil;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
-import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -27,6 +28,7 @@ import org.springframework.web.cors.CorsConfiguration;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
+    private static final String ALLOWED_METHOD_NAMES = "GET,HEAD,POST,PUT,DELETE,TRACE,OPTIONS,PATCH";
     private final CustomOAuth2UserService customOAuth2UserService;
     private final JwtAuthTokenUtil jwtAuthTokenUtil;
     private final TokenValidator tokenValidator;
@@ -53,21 +55,21 @@ public class SecurityConfig {
 
                     CorsConfiguration configuration = new CorsConfiguration();
 
-                    configuration.setAllowedOrigins(Collections.singletonList("*"));
-                    configuration.setAllowedMethods(Collections.singletonList("*"));
+                    configuration.setAllowedOriginPatterns(Arrays.asList(
+                            "https://localhost:5173",    // 로컬 개발 서버
+                            "https://dev.api.uket.site",  // 개발 서버
+                            "https://accounts.kakao.com"  // 카카오 로그인
+                    ));
+                    configuration.setAllowedMethods(List.of(ALLOWED_METHOD_NAMES.split(",")));
                     configuration.setAllowCredentials(true);
                     configuration.setAllowedHeaders(Collections.singletonList("*"));
                     configuration.setMaxAge(3600L);
 
-                    configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
-                    configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+                    configuration.setExposedHeaders(Arrays.asList("Set-Cookie", "Authorization"));
 
                     return configuration;
                 }))
-                .csrf(auth -> auth
-                        .ignoringRequestMatchers(PathRequest.toH2Console())
-                        .disable()
-                )
+                .csrf(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
 
@@ -93,7 +95,6 @@ public class SecurityConfig {
                 .authorizeHttpRequests(registry -> registry
                         .requestMatchers("/api/v1/auth").permitAll()
                         .requestMatchers("/api/v1/auth/**").permitAll()
-                        .requestMatchers(PathRequest.toH2Console()).permitAll()
                 )
                 .authorizeHttpRequests(auth -> auth
                         .anyRequest().authenticated())
@@ -102,7 +103,7 @@ public class SecurityConfig {
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
                 .headers(headers ->
-                        headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin)
+                        headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable)
                 );
 
         return http.build();
